# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Thinkit is a set of interfaces to enable PINS testing to be infrastructure agnostic.

# load("@rules_cc//cc:cc_library.bzl", "cc_library")
# load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "thinkit",
    deps = [
        ":control_device",
        ":generic_testbed",
        ":mirror_testbed",
        ":switch",
        ":test_environment",
    ],
)

cc_library(
    name = "thinkit_mocks",
    testonly = 1,
    deps = [
        ":mock_control_device",
        ":mock_generic_testbed",
        ":mock_mirror_testbed",
        ":mock_switch",
        ":mock_test_environment",
    ],
)

cc_library(
    name = "switch",
    hdrs = ["switch.h"],
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//cert:cert_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//factory_reset:factory_reset_cc_grpc_proto",
        "@openconfig_gnoi//os:os_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "switch_test",
    srcs = ["switch_test.cc"],
    deps = [
        ":switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//cert:cert_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//factory_reset:factory_reset_cc_grpc_proto",
        "@openconfig_gnoi//os:os_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "mock_switch",
    testonly = 1,
    hdrs = ["mock_switch.h"],
    deps = [
        ":switch",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnoi//cert:cert_cc_grpc_proto",
        "@openconfig_gnoi//diag:diag_cc_grpc_proto",
        "@openconfig_gnoi//factory_reset:factory_reset_cc_grpc_proto",
        "@openconfig_gnoi//os:os_cc_grpc_proto",
        "@openconfig_gnoi//system:system_cc_grpc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_switch_test",
    srcs = ["mock_switch_test.cc"],
    deps = [
        ":mock_switch",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "mirror_testbed",
    hdrs = ["mirror_testbed.h"],
    deps = [
        ":switch",
        ":test_environment",
    ],
)

cc_library(
    name = "mirror_testbed_fixture",
    testonly = 1,
    hdrs = ["mirror_testbed_fixture.h"],
    deps = [
        ":mirror_testbed",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "mock_mirror_testbed",
    testonly = 1,
    hdrs = ["mock_mirror_testbed.h"],
    deps = [
        ":mirror_testbed",
        ":switch",
        ":test_environment",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_mirror_testbed_test",
    srcs = ["mock_mirror_testbed_test.cc"],
    deps = [
        ":mock_mirror_testbed",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "test_environment",
    hdrs = ["test_environment.h"],
    deps = [
        "//thinkit/proto:metrics_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@protobuf//:protobuf",
    ],
)

cc_library(
    name = "mock_test_environment",
    testonly = 1,
    hdrs = ["mock_test_environment.h"],
    deps = [
        ":test_environment",
        "//thinkit/proto:metrics_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_test_environment_test",
    srcs = ["mock_test_environment_test.cc"],
    deps = [
        ":mock_test_environment",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "bazel_test_environment",
    testonly = True,
    srcs = ["bazel_test_environment.cc"],
    hdrs = ["bazel_test_environment.h"],
    deps = [
        ":test_environment",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@gutil//gutil:test_artifact_writer",
    ],
)

cc_test(
    name = "bazel_test_environment_test",
    srcs = ["bazel_test_environment_test.cc"],
    deps = [
        ":bazel_test_environment",
        ":test_environment",
        "@protobuf//:protobuf",
        "@googletest//:gtest_main",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/strings",
        # This dependency is not technically needed inside Google3,
        # but is a hack to keep the Copybara rules simple.
        "@google_benchmark//:benchmark",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "ssh_client",
    hdrs = ["ssh_client.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_library(
    name = "mock_ssh_client",
    testonly = 1,
    hdrs = ["mock_ssh_client.h"],
    deps = [
        ":ssh_client",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_ssh_client_test",
    srcs = ["mock_ssh_client_test.cc"],
    deps = [
        ":mock_ssh_client",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "generic_testbed",
    hdrs = ["generic_testbed.h"],
    deps = [
        ":control_device",
        ":switch",
        ":test_environment",
        "//thinkit/proto:generic_testbed_cc_proto",
        "@com_github_otg_models//:otg_grpc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "generic_testbed_fixture",
    testonly = 1,
    hdrs = ["generic_testbed_fixture.h"],
    deps = [
        ":generic_testbed",
        "//thinkit/proto:generic_testbed_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "mock_generic_testbed",
    testonly = 1,
    hdrs = ["mock_generic_testbed.h"],
    deps = [
        ":control_device",
        ":generic_testbed",
        ":switch",
        ":test_environment",
        "@com_github_otg_models//:otg_grpc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_generic_testbed_test",
    srcs = ["mock_generic_testbed_test.cc"],
    deps = [
        ":mock_generic_testbed",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "control_device",
    hdrs = ["control_device.h"],
    deps = [
        ":packet_generation_finalizer",
        "@openconfig_gnoi//diag:diag_cc_proto",
        "@grpc//:grpc++",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_library(
    name = "mock_control_device",
    testonly = 1,
    hdrs = ["mock_control_device.h"],
    deps = [
        ":control_device",
        ":packet_generation_finalizer",
        "@openconfig_gnoi//diag:diag_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "mock_control_device_test",
    srcs = ["mock_control_device_test.cc"],
    deps = [
        ":mock_control_device",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "generic_testbed_test",
    srcs = ["generic_testbed_test.cc"],
    deps = [
        ":generic_testbed",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "packet_generation_finalizer",
    hdrs = ["packet_generation_finalizer.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/time",
    ],
)
