# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "portable_pins_backend",
    srcs = ["portable_pins_backend.cc"],
    hdrs = ["portable_pins_backend.h"],
    deps = [
        "//dvaas:dataplane_validation",
        "//dvaas:output_writer",
        "//dvaas:switch_api",
        "//dvaas:test_vector",
        "//dvaas:test_vector_cc_proto",
        "//fourward:fourward_oracle",
        "//fourward:test_vector_generation",
        "//lib/p4rt:p4rt_port",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_symbolic/packet_synthesizer:coverage_goal_cc_proto",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "//sai_p4/instantiations/google/test_tools:test_entries",
        "//sai_p4/tools:auxiliary_entries_for_v1model_targets",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_test(
    name = "portable_pins_backend_test",
    size = "large",
    srcs = ["portable_pins_backend_test.cc"],
    data = [
        "//fourward:sai_middleblock_fourward",
    ],
    deps = [
        ":portable_pins_backend",
        "//dvaas:dataplane_validation",
        "//dvaas:port_id_map",
        "//dvaas:switch_api",
        "//dvaas:validation_result",
        "//dvaas:test_vector",
        "//dvaas:test_vector_cc_proto",
        "//fourward:fourward_mirror_testbed",
        "//fourward:fourward_oracle",
        "//fourward:test_vector_generation",
        "//lib/p4rt:p4rt_port",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_symbolic/packet_synthesizer:packet_synthesizer_cc_proto",
        "//sai_p4/instantiations/google/test_tools:test_entries",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "@gutil//gutil:io",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)
