# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dvaas_regression_test",
    testonly = True,
    srcs = ["dvaas_regression_test.cc"],
    hdrs = ["dvaas_regression_test.h"],
    linkstatic = True,
    deps = [
        "//dvaas:dataplane_validation",
        "//dvaas:mirror_testbed_config",
        "//dvaas:switch_api",
        "//dvaas:test_vector_cc_proto",
        "//dvaas:validation_result",
        "//gutil:status_matchers",
        "//p4_pdpi:p4_runtime_session_extras",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)
