# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_googleapis_imports//:imports.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dvaas_regression_test",
    testonly = True,
    srcs = ["dvaas_regression_test.cc"],
    hdrs = ["dvaas_regression_test.h"],
    linkstatic = True,
    deps = [
        ":dvaas_regression_cc_proto",
        "//dvaas:dataplane_validation",
        "//dvaas:mirror_testbed_config",
        "//dvaas:switch_api",
        "//dvaas:test_vector_cc_proto",
        "//dvaas:validation_result",
        "//lib/p4rt:p4rt_port",
        "//p4_pdpi:p4_runtime_session",
        "//p4_pdpi:p4_runtime_session_extras",
        "//tests/lib:switch_test_setup_helpers",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/log",
        "@com_google_googletest//:gtest",
        "@com_google_gutil//gutil:status_matchers",
    ],
    alwayslink = True,
)

proto_library(
    name = "dvaas_regression_proto",
    testonly = True,
    srcs = ["dvaas_regression.proto"],
    deps = [
        "//dvaas:test_vector_proto",
        "//p4_pdpi:ir_proto",
        "@com_github_p4lang_p4runtime//:p4info_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "dvaas_regression_cc_proto",
    testonly = True,
    deps = [":dvaas_regression_proto"],
)

