# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dvaas_regression_test",
    testonly = True,
    srcs = ["dvaas_regression_test.cc"],
    hdrs = ["dvaas_regression_test.h"],
    linkstatic = True,
    deps = [
        ":dvaas_regression_cc_proto",
        "//dvaas:dataplane_validation",
        "//dvaas:mirror_testbed_config",
        "//dvaas:switch_api",
        "//dvaas:test_vector_cc_proto",
        "//dvaas:validation_result",
        "//lib/p4rt:p4rt_port",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//p4_infra/p4_runtime:p4_runtime_session_extras",
        "//tests/lib:switch_test_setup_helpers",
        "//thinkit:mirror_testbed",
        "//thinkit:mirror_testbed_fixture",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@gutil//gutil:status_matchers",
    ],
    alwayslink = True,
)

proto_library(
    name = "dvaas_regression_proto",
    testonly = True,
    srcs = ["dvaas_regression.proto"],
    deps = [
        "//dvaas:test_vector_proto",
        "@p4_infra//p4_pdpi:ir_proto",
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "dvaas_regression_cc_proto",
    testonly = True,
    deps = [":dvaas_regression_proto"],
)
