# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This package provides simple traffic sending and validation capabilities
# through the GenericTestbed and the ControlDevice.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "basic_p4rt_util",
    srcs = ["basic_p4rt_util.cc"],
    hdrs = ["basic_p4rt_util.h"],
    deps = [
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:pd",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/functional:bind_front",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "basic_p4rt_util_test",
    srcs = ["basic_p4rt_util_test.cc"],
    deps = [
        ":basic_p4rt_util",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "basic_traffic",
    testonly = True,
    srcs = ["basic_traffic.cc"],
    hdrs = ["basic_traffic.h"],
    deps = [
        ":basic_p4rt_util",
        "//lib/gnmi:gnmi_helper",
        "//lib/p4rt:p4rt_programming_context",
        "//lib/utils:generic_testbed_utils",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "//thinkit:control_device",
        "//thinkit:generic_testbed",
        "//thinkit:switch",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
    ],
)

cc_test(
    name = "basic_traffic_test",
    srcs = ["basic_traffic_test.cc"],
    deps = [
        ":basic_traffic",
        "//p4_infra/p4_runtime:p4_runtime_session",
        "@p4_infra//packetlib",
        "@p4_infra//packetlib:packetlib_cc_proto",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//thinkit:control_device",
        "//thinkit:generic_testbed",
        "//thinkit:mock_control_device",
        "//thinkit:mock_generic_testbed",
        "//thinkit:mock_switch",
        "//thinkit:packet_generation_finalizer",
        "//thinkit/proto:generic_testbed_cc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)
